@@ -1,3 +1,4 @@
+- better fmessage osx utility
 31/03/2007 0.2.2
 - updater.lua: fix @updater (gareuselesinge)
 - tin.lua: removed obsolete code, attachement should now work (gareuselesinge)
